testdata/invalid/truncated.cast
{"version": 2, "width": 80, "height": 24}
[1.0, "o", "valid event"]
[1.5, "o", "hel